tests/errors/coalesce-undetermined/main.pa
# `??` on a left-hand side whose carrier type is never pinned.
def f = fun x {
	x ?? 0
}

def main = print "x"
